# JariBbopgi

./: .gitignore  CMakeLists.txt  README.md  README.txt  main.cpp
libs/SFML-2.5.1/lib/cmake/SFML/: SFMLConfig.cmake  SFMLConfigVersion.cmake
resource/: list.txt
